--- a/src/pages/Editor/styles.scss
+++ b/src/pages/Editor/styles.scss
@@ -6,11 +6,18 @@
 .Editor {
   bottom: 0;
   display: flex;
+  flex-direction: column;
   flex: 1;
   left: 0;
   position: absolute;
   right: 0;
   top: 50px;
+
+  &-Content {
+    display: flex;
+    height: 100%;
+    width: 100%;
+  }
 
   &-CodeMirror {
     display: flex;
@@ -22,6 +29,7 @@
     }
 
     .CodeMirror {
+      background-color: hsl(220, 13%, 18%);
       height: 100%;
       width: 100%;
     }
@@ -30,17 +38,27 @@
   &-Empty {
     align-items: center;
     background-color: hsl(220, 13%, 18%);
+    color: #d7dae0;
+    cursor: default;
     display: flex;
     height: 100%;
     justify-content: center;
+    text-align: center;
+    user-select: none;
     width: 100%;
 
-    svg {
-      height: 250px;
-      width: 250px;
-      opacity: .4;
+    div {
+      opacity: .2;
+    }
 
-      g {
+    svg {
+      display: block;
+      height: 150px;
+      width: 150px;
+
+
+      g,
+      path {
         fill: #d7dae0;
       }
     }
@@ -52,6 +70,10 @@
     position: relative;
     flex-direction: column;
     width: 50%;
+  }
+
+  &-Left {
+    border-right: 1px solid #181a1f;
   }
 
   &-Footer {
@@ -80,7 +102,6 @@
   box-shadow: inset 0 -1px 0 #181a1f;
   display: flex;
   padding-top: 10px;
-  height: 40px;
 
   .Tab {
     color: #d7dae0;
@@ -93,7 +114,7 @@
     padding-right: 10px;
     position: relative;
     text-align: center;
-    top: -2px;
+    top: -1px;
     user-select: none;
 
     &:after,
@@ -149,6 +170,7 @@
       border-radius: 3px;
       height: 22px;
       margin: 0 8px;
+      margin-bottom: 8px;
       min-width: auto;
       padding: 5px;
 
@@ -189,9 +211,15 @@
   display: flex;
   flex-direction: column;
 
-  iframe {
-    border: 0;
+  &-Iframe {
+    display: flex;
     height: 100%;
     width: 100%;
+
+    iframe {
+      border: 0;
+      height: 100%;
+      width: 100%;
+    }
   }
 }
