--- a/src/components/Auth/styles.scss
+++ b/src/components/Auth/styles.scss
@@ -27,7 +27,9 @@
     align-items: center;
     cursor: pointer;
     display: flex;
+    position: relative;
     user-select: none;
+    z-index: 1;
 
     img {
       border-radius: 30px;
