--- a/src/components/Iframe/styles.scss
+++ b/src/components/Iframe/styles.scss
@@ -4,6 +4,27 @@
   flex-direction: column;
   width: 100%;
   position: relative;
+
+  &:hover {
+    .Iframe-Toolbar {
+      opacity: 1;
+      pointer-events: auto;
+    }
+  }
+}
+
+.Iframe-Toolbar {
+
+  // this cost less to update opacity/pointerEvents than changing display
+  opacity: 0;
+  pointer-events: none;
+
+  display: flex;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  z-index: 1;
+
 }
 
 .Iframe-Content {
@@ -16,15 +37,6 @@
     height: 100%;
     width: 100%;
   }
-}
-
-.Iframe-Toolbar {
-  display: flex;
-  position: absolute;
-  top: 10px;
-  right: 10px;
-  z-index: 1;
-
 }
 
 .Iframe-Toolbar-Button {
