--- a/src/components/Editor/styles.scss
+++ b/src/components/Editor/styles.scss
@@ -23,6 +23,8 @@
   display: flex;
   flex-direction: column;
   flex-basis: 50%;
+  // lol, not sure about that
+  // transition: 150ms ease-in-out flex-basis;
 }
 
 .Editor-Left {
