Logout with socket, add req.user to req.session.user, delete session.passport and session.user on logout

--- a/src/components/Dropdown/styles.scss
+++ b/src/components/Dropdown/styles.scss
@@ -23,6 +23,11 @@
     padding: 10px;
     user-select: none;
 
+    &--action {
+      cursor: pointer;
+      user-select: none;
+    }
+
     a {
       color: #21252b;
       display: block;
