improve delete loading state

--- a/src/components/GistPanel/styles.scss
+++ b/src/components/GistPanel/styles.scss
@@ -36,6 +36,10 @@
   cursor: default;
   padding: 0 5px;
   user-select: none;
+
+  &.isDeleting {
+    font-style: italic;
+  }
 }
 
 .GistPanelFile--actions {
