--- a/src/components/Button/style.scss
+++ b/src/components/Button/style.scss
@@ -5,6 +5,7 @@
   user-select: none;
   background-color: #282c34;
   border: 1px solid #181a1f;
+  display: inline-block;
   color: #d7dae0;
   font-size: 12px;
   box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.04);
