--- a/src/components/GistPanel/styles.scss
+++ b/src/components/GistPanel/styles.scss
@@ -6,8 +6,13 @@
   border-right: 1px solid #181a1f;
 }
 
+* {
+  min-width: 0;
+}
+
 .GistPanelFile {
   height: 30px;
+  min-width: 0;
 
   display: flex;
 
@@ -36,6 +41,7 @@
   cursor: default;
   padding: 0 5px;
   user-select: none;
+  min-width: 0;
 
   &.isDeleting {
     font-style: italic;
