--- a/src/components/GistPanel/styles.scss
+++ b/src/components/GistPanel/styles.scss
@@ -32,7 +32,7 @@
   color: #aaa;
   flex-grow: 1;
   cursor: pointer;
-  padding: 0 5px;
+  padding: 0 10px;
   user-select: none;
   min-width: 0;
 
@@ -79,8 +79,7 @@
   display: block;
   width: 100%;
   outline: none;
-  border: 1px solid transparent;
   &:focus {
-    border-color: #528bff;
+    box-shadow: inset 0 0 0 1px #528bff;
   }
 }
