--- a/src/components/Tabs/styles.scss
+++ b/src/components/Tabs/styles.scss
@@ -2,10 +2,12 @@
   background-color: #21252b;
   box-shadow: inset 0 -1px 0 #181a1f;
   display: flex;
-  padding-top: 9px;
+  padding-top: 10px;
+  padding-bottom: 1px;
 
   .Tab {
     color: #d7dae0;
+    flex: 1;
     cursor: pointer;
     font-size: 10px;
     height: 32px;
@@ -16,6 +18,11 @@
     text-align: center;
     position: relative;
     user-select: none;
+    top: 1px;
+
+    &:last-child {
+      margin-right: 10px;
+    }
 
     &:after,
     &:before {
@@ -78,11 +85,17 @@
 
     &--float {
       border-radius: 3px;
+      flex: 0;
       height: 22px;
-      margin: 0 10px;
-      margin-bottom: 10px;
+      line-height: 11px;
+      margin: 0 10px 11px 0;
       min-width: auto;
       padding: 5px;
+      white-space: nowrap;
+
+      &:first-child {
+        margin-left: 10px;
+      }
 
       &:after {
         box-shadow: none;
@@ -100,13 +113,17 @@
       }
     }
 
+    &--text {
+      padding: 5px 10px;
+    }
+
     &--active {
       cursor: default;
 
       &:before {
         background: #528bff;
         border-top-left-radius: 3px;
-        bottom: 1px;
+        bottom: 0;
         left: 0;
         pointer-events: none;
         top: 1px;
